# lab

projects/hoz/: AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md
projects/hoz/docs/: config.md
projects/hoz/src/: commands.cpp  commands.hpp  config.hpp  main.cpp  print.hpp  resolver.cpp  resolver.hpp
